<resources>
    <string name="app_name">聊天系统</string>
    <string name="qq">请输入QQ号码</string>
    <string name="please_remember_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="login_out">退出登录</string>
    <string name="remember_password">记住密码</string>
    <string name="register">注册新账号</string>
    <string name="more_login">更多登录选项</string>
    <string name="not_notice_login">隐身登录</string>
    <string name="silence_login">静音登录</string>
    <string name="login_state_phone_computer">允许手机/电脑同时在线</string>
    <string name="group_of_news">接收群消息</string>
    <string name="send_verification_code_for_me">向我发送验证码</string>
    <string name="QQ_Server">《腾讯QQ服务条款》</string>
    <string name="read_and_agreed">已阅读并同意</string>
    <string name="please_input_phone_number">请输入手机号码</string>
    <string name="update">修改</string>
    <string name="phone_number">手机号</string>
    <string name="_86_china">+86中国大陆</string>
    <string name="local_place">所在地</string>
    <string name="photo_setting">头像设置</string>
    <string name="password_setting">密码设置</string>
    <string name="phone_verification">手机验证</string>
    <string name="x_seconds_received_verification_code">x秒后 可重新获得验证码</string>
    <string name="submit_verification_code">设置密码</string>
    <string name="get_again">重新获取</string>
    <string name="please_input_verification_code">请输入收到的验证码</string>
    <string name="verification_code">验证码</string>
    <string name="return_text">返回</string>
    <string name="set_photo">设置头像</string>
    <string name="input_login_password">请登录输入登录密码</string>
    <string name="input_login_password_again">请再次输入输入登录密码</string>
    <string name="submit_register">提交注册</string>
    <string name="my">我的</string>
    <string name="app_store">应用</string>
    <string name="net_disk">网盘</string>
    <string name="friend">好友</string>
    <string name="message">消息</string>
    <string name="my_message">我的信息</string>
    <string name="nike_name_1">昵  称：</string>
    <string name="login_number_1">登录账号：</string>
    <string name="phone_number_1">注册手机号：</string>
    <string name="create_time_1">注册时间：</string>
    <string name="password_1">密码：</string>
    <string name="account_and_security">账号与安全</string>
    <string name="my_friend">我的好友</string>
    <string name="search_text">查找好友</string>
    <string name="send_message">发消息</string>
    <string name="voice_call">语音通话</string>
    <string name="video_call">视频通话</string>
    <string name="friend_message">好友信息</string>
    <string name="please_refresh">请释放刷新</string>
    <string name="loading_complete">已加载完成</string>
    <string name="friend_list_is_loading">好友列表加载中......</string>
    <string name="please_input_message">请输入消息</string>
    <string name="send">发送</string>
    <string name="add_image">添加图片</string>
    <string name="send_voice">发语音</string>
    <string name="no_chat_friend">最新没有聊天的好友！</string>
    <string name="long_click_voice">长按开始录音</string>
    <string name="voice_start">00:00</string>
    <string name="voicing">录音中....</string>
    <string name="over_voice_and_send">结束并发送录音</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="album">相册</string>
    <string name="photo">拍照</string>
    <string name="photo_show">查看头像</string>
    <string name="_886">+886中国台湾</string>
    <string name="_852">+852中国香港</string>
    <string name="_853">+853中国澳门</string>
    <string name="_86">+86中国大陆</string>
    <string name="select_image_style">请选择一种上传头像的方式</string>
    <string name="exit_register">是否确认退出注册？</string>
    <string name="tip">提 示</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_nick_name">请输入昵称</string>
    <string name="update_password">修改密码</string>
    <string name="update_phone_number">修改绑定手机号</string>
    <string name="input_start_password">请输入原始密码</string>
    <string name="input_new_password">请输入修改密码</string>
    <string name="re_input_new_password">请再次输入修改密码</string>
    <string name="theme_setting">主题设置</string>
    <string name="my_qr_code">我的二维码名片</string>
    <string name="setting_bg">应用背景</string>
    <string name="check_apk_update">检测更新</string>
    <string name="loading">加载中，请稍后......</string>
    <string name="page_select">切换到页码</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="replay">重播</string>
    <string name="apk_store">应用商城</string>
    <string name="time">时间</string>
    <string name="refreshing">正在刷新.......</string>
    <string name="file_empty">文件夹为空</string>
    <string name="search">搜索</string>
    <string name="please_input_keyword">请输入视频关键字</string>
    <string name="video_name">视频名称：</string>
    <string name="video_time">更新时间：</string>
    <string name="video_length">视频时长：</string>
    <string name="video_author">视频时长：</string>
    <string name="comic_name">漫画名称：</string>
    <string name="comic_update_chapter">最新章节：</string>

</resources>
