<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="@drawable/progress_dialog_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/tip"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_message_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:text="@string/exit_register"
        android:textColor="#000000" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginTop="10dp"
        android:background="#888888" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel_exit_register_TextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_dialog_left_bg"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#000000" />

        <View
            android:layout_width="0.2dp"
            android:layout_height="match_parent"
            android:background="#888888" />

        <TextView
            android:id="@+id/confirm_exit_register_TextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_dialog_right_bg"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="#0582FF" />
    </LinearLayout>

</LinearLayout>