<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/progress_dialog_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:id="@+id/dialog_old_password_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@null"
        android:hint="@string/input_start_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textColor="#000000"
        tools:ignore="LabelFor" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/line_view_bg" />

    <EditText
        android:id="@+id/dialog_new_password_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@null"
        android:hint="@string/input_new_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textColor="#000000"
        tools:ignore="LabelFor" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/line_view_bg" />

    <EditText
        android:id="@+id/dialog_re_new_password_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@null"
        android:hint="@string/re_input_new_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textColor="#000000"
        tools:ignore="LabelFor" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="#888888" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel_update_TextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_dialog_left_bg"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#000000" />

        <View
            android:layout_width="0.2dp"
            android:layout_height="match_parent"
            android:background="#888888" />

        <TextView
            android:id="@+id/confirm_update_TextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_dialog_right_bg"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="#0582FF" />
    </LinearLayout>

</LinearLayout>