<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo_ImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="42dp"
        android:src="@drawable/logo_login"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/login_account_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_ImageView"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/login_input"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_account_EditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#00ffffff"
            android:digits="0123456789"
            android:hint="@string/qq"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:background="@drawable/divider_horizontal_line" />

        <EditText
            android:id="@+id/login_password_EditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#00ffffff"
            android:hint="@string/please_remember_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <Button
        android:id="@+id/login_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_account_linearLayout"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="42dp"
        android:background="@drawable/login_button_select"
        android:text="@string/login" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_Button"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:padding="5dp">

        <CheckBox
            android:id="@+id/remember_password_CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:button="@null"
            android:checked="false"
            android:drawableStart="@drawable/checkbox_bg"
            android:paddingTop="2dp"
            android:text="@string/remember_password"
            android:textSize="12sp" />

        <Button
            android:id="@+id/login_register_Button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/login_reg_button"
            android:gravity="left|center"
            android:paddingLeft="8dp"
            android:paddingRight="25dp"
            android:text="@string/register"
            android:textColor="#ffffffff"
            android:textSize="12sp"
            tools:ignore="RelativeOverlap,RtlHardcoded" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/foot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/login_more_menu_back"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/view_more_RelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/tv_login_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@null"
                android:gravity="center"
                android:text="@string/more_login"
                android:textColor="#ffffffff"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/more_up_ImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/tv_login_more"
                android:clickable="false"
                android:src="@drawable/login_more_up"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/menu_more_LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffffffff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffffffff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="17dp"
                android:layout_marginRight="35dp"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@null"
                    android:button="@null"
                    android:drawableStart="@drawable/checkbox_bg"
                    android:drawablePadding="4dp"
                    android:text="@string/not_notice_login"
                    android:textSize="12sp" />

                <CheckBox
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:button="@null"
                    android:drawableStart="@drawable/checkbox_bg"
                    android:drawablePadding="4dp"
                    android:text="@string/silence_login"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="17dp"
                android:layout_marginRight="35dp"
                android:layout_marginBottom="17dp"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@null"
                    android:button="@null"
                    android:drawableStart="@drawable/checkbox_bg"
                    android:drawablePadding="4dp"
                    android:text="@string/login_state_phone_computer"
                    android:textSize="12sp" />

                <CheckBox
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:button="@null"
                    android:drawableStart="@drawable/checkbox_bg"
                    android:drawablePadding="4dp"
                    android:text="@string/group_of_news"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>