<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ChatFriendActivity">

    <include layout="@layout/title_back_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/message_RecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/line_view_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/send_voice_message_ImageView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/send_voice"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/voice_Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_send_rounded_corners_bg"
            android:text="@string/long_click_voice"
            android:visibility="gone" />

        <EditText
            android:id="@+id/send_message_EditText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/please_input_message"
            android:importantForAutofill="no"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:visibility="visible"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/send_message_Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/send"
            android:visibility="gone" />

        <Button
            android:id="@+id/send_image_message_Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_send_rounded_corners_bg"
            android:text="@string/add_image" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/line_view_bg" />

</LinearLayout>